--- a/facefusion.ini
+++ b/facefusion.ini
@@ -1,8 +1,8 @@
 [paths]
-temp_path =
-jobs_path =
-source_paths =
-target_path =
+temp_path =./temp_path
+jobs_path =./temp_path
+source_paths =./temp_path
+target_path =./temp_path
 output_path =D:\document\video\faceOut
 
 [patterns]
@@ -100,8 +100,8 @@ ui_workflow =
 
 [execution]
 execution_device_id =
-execution_providers =
-execution_thread_count =
+execution_providers =cuda tensorrt
+execution_thread_count =32
 execution_queue_count =
 
 [download]
