整合包制作

--- a/facefusion.ini
+++ b/facefusion.ini
@@ -1,9 +1,9 @@
 [paths]
-temp_path =
-jobs_path =
-source_paths =
-target_path =
-output_path =
+temp_path =./temp_path
+jobs_path =./temp_path
+source_paths =./temp_path
+target_path =./temp_path
+output_path =./output
 
 [patterns]
 source_pattern =
