还原默认设置

--- a/facefusion.ini
+++ b/facefusion.ini
@@ -3,7 +3,7 @@ temp_path =./temp_path
 jobs_path =./temp_path
 source_paths =./temp_path
 target_path =./temp_path
-output_path =D:\document\video\faceOut
+output_path =./output
 
 [patterns]
 source_pattern =
@@ -100,8 +100,8 @@ ui_workflow =
 
 [execution]
 execution_device_id =
-execution_providers =cuda tensorrt
-execution_thread_count =32
+execution_providers =
+execution_thread_count =
 execution_queue_count =
 
 [download]
