解决大视频长视频换不了的问题

--- a/facefusion.ini
+++ b/facefusion.ini
@@ -1,8 +1,8 @@
 [paths]
-temp_path =./temp_path
-jobs_path =./temp_path
-source_paths =./temp_path
-target_path =./temp_path
+temp_path =
+jobs_path =./temp
+source_paths =./temp
+target_path =./temp
 output_path =./output
 
 [patterns]
